# dyolo-kya

./: .gitignore  .mcp.json  CAPABILITIES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GETTING-STARTED.md  INTEGRATION.md  LICENSE-APACHE  LICENSE-MIT  Makefile  PUBLISHING.md  README.md  SECURITY.md  WHY_A1.md  cbindgen.toml  docker-compose.yml  env.example  install.sh  setup.bat  setup.sh  test-dashboard.html  test-everything.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  feature-request.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml  publish.yml  release-binaries.yml
a1-cli/: Cargo.toml
a1-cli/src/: main.rs
a1-cli/src/commands/: completion.rs  decode.rs  inspect.rs  issue.rs  keygen.rs  migrate.rs  mod.rs  passport.rs  policy.rs  revoke.rs  revoke_batch.rs  verify.rs
a1-gateway/: Cargo.toml  build.rs
a1-gateway/src/: main.rs  state.rs
a1-gateway/src/routes/: agent_connect.rs  agent_patch.rs  agent_relay.rs  ai_proxy.rs  anchor.rs  authorize.rs  automagic.rs  batch.rs  cert.rs  chain.rs  did.rs  governance.rs  health.rs  jwt_bridge.rs  mcp.rs  mod.rs  negotiate.rs  passport.rs  passports.rs  studio.rs  swarm.rs  tenant.rs  webhook.rs  wellknown.rs
a1-identity/: Cargo.toml
a1-identity/src/: jwt_binding.rs  lib.rs  policy.rs  spiffe_binding.rs
a1-pg/: Cargo.toml
a1-pg/src/: lib.rs
a1-redis/: Cargo.toml  README.md
a1-redis/src/: lib.rs
benches/: chain_bench.rs
docker/: Dockerfile  docker-compose.yml  otel-collector-config.yml
docs/: architecture.md  enterprise-deployment.md  enterprise-kms.md  passport-quickstart.md  performance-benchmarks.md  vs-jwt-spiffe.md
docs/compliance/: iso27001-mapping.md  sample-audit-report.md  soc2-mapping.md
docs/dev/: test-dashboard.html
docs/integrations/: langchain.md  langgraph.md  llamaindex.md  openai-agents.md  semantic_kernel.md
dyolo-kya-cli/: Cargo.toml
dyolo-kya-cli/src/: main.rs
dyolo-kya-cli/src/commands/: completion.rs  decode.rs  inspect.rs  issue.rs  keygen.rs  migrate.rs  mod.rs  policy.rs  revoke.rs  revoke_batch.rs  verify.rs
dyolo-kya-gateway/: Cargo.toml
dyolo-kya-gateway/src/: main.rs  state.rs
dyolo-kya-gateway/src/routes/: authorize.rs  batch.rs  cert.rs  chain.rs  health.rs  mod.rs  wellknown.rs
dyolo-kya-identity/: Cargo.toml
dyolo-kya-identity/src/: jwt_binding.rs  lib.rs  policy.rs  spiffe_binding.rs
dyolo-kya-pg/: Cargo.toml
dyolo-kya-pg/src/: lib.rs
dyolo-kya-redis/: Cargo.toml  README.md
dyolo-kya-redis/src/: lib.rs
examples/: trading_agent.rs  trading_chain.yaml
examples/integrations/: autogen_example.py  langchain_example.py  langgraph_example.py  llamaindex_example.py  openai_agents_example.ts  openai_assistants_example.py  semantic_kernel_example.py
migrations/: 001_initial.sql
scripts/: build-studio.sh  setup.ps1  test.bat  test.ps1  test.sh
sdk/go/: go.mod  sdk-go-README.md
sdk/go/kya/: client.go  client_test.go  passport.go  passport_test.go
sdk/python/: pyproject.toml  sdk-python-README.md
sdk/python/a1/: __init__.py  autogen_tool.py  client.py  crewai_tool.py  langchain_tool.py  langgraph_tool.py  llamaindex_tool.py  middleware.py  openai_tool.py  otel.py  passport.py  semantic_kernel_tool.py  siem.py  swarm.py  vault.py
sdk/python/dyolo_kya/: __init__.py  autogen_tool.py  client.py  crewai_tool.py  langchain_tool.py  openai_tool.py
sdk/python/tests/: passport_langchain_example.py  passport_openai_example.py  test_client.py  test_logic.py  test_passport.py
sdk/typescript/: README.md  jest.config.ts  package-lock.json  package.json  sdk-typescript-README.md  tsconfig.cjs.json  tsconfig.json  tsconfig.test.json
sdk/typescript/src/: index.ts  integrations.ts  middleware.ts  passport.ts  swarm.ts
sdk/typescript/tests/: integrations.test.ts  passport.test.ts
spec/: A1-PROTOCOL.md
src/: anchor.rs  audit.rs  cert.rs  cert_extensions.rs  chain.rs  context.rs  crypto.rs  did.rs  error.rs  ffi.rs  governance.rs  hybrid.rs  identity.rs  intent.rs  lib.rs  negotiate.rs  policy.rs  provenance.rs  registry.rs  swarm.rs  wire.rs  zk.rs
src/identity/: narrowing.rs  receipt.rs
src/passport/: mod.rs
src/zk_guest/: Cargo.toml
src/zk_guest/src/: main.rs
studio/src/: index.template.html
studio/src/css/: 01-base.css  02-layout.css  03-agents.css  04-flow.css  05-chat.css  06-passports.css  07-integration.css  08-components.css  09-additions.css  10-desktop.css
studio/src/js/: 01-globals.js  02-attribution.js  03-settings.js  04-help-data.js  05-api.js  06-onboarding.js  07-help-ui.js  99-app.js
studio/src/js/components/: 00-quickstart.js  01-dev-tabs.js  02-how-it-works.js  03-my-passports.js  04-mcp-tester.js  05-ai-integration.js  06-error-explainer.js  07-lifecycle.js  08-connect-agents.js  09-wizard.js  10-direct-connect.js  11-passport-vault.js  12-guided-next.js  13-revoke-confirm.js  14-trust-layer.js  15-security-diagram.js  16-passport-all.js  17-local-llm.js  18-ai-assistant.js  19-passports-hub.js  20-ai-tools-hub.js  21-enterprise.js  22-activity-dashboard.js
templates/: any-agent.md  claude-code.md  crewai.md  ironclaw.md  langchain.md  mcp-connect.md  openai-agents.md  openclaw.md
tests/: integration.rs  passport_integration.rs
wiki/: CLI-Reference.md  Compliance.md  DID-VC.md  Enterprise-Deployment.md  Gateway-API.md  Go-SDK.md  Governance.md  Home.md  How-It-Compares.md  KMS-Integration.md  Passport-Guide.md  Post-Quantum.md  Python-SDK.md  Quickstart.md  SIEM-Integration.md  Security-Model.md  Swarm.md  TypeScript-SDK.md  ZK-Commitments.md
wire/: schema.json
