[workspace]
members  = [
    ".",
    "a1-redis",
    "a1-gateway",
    "a1-cli",
    "a1-pg",
    "a1-identity",
]
resolver = "2"

[workspace.dependencies]
blake3        = "1"
subtle        = { version = "2.5", default-features = false }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize", "batch"] }
rand          = "0.8"
thiserror     = "1"
zeroize       = { version = "1", features = ["derive"] }
hex           = "0.4"
base64        = "0.22"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
async-trait   = "0.1"
tokio         = { version = "1", features = ["full"] }
tracing       = "0.1"

[package]
name          = "a1-ai"
version       = "2.8.0"
edition       = "2021"
authors       = ["dyolo <dyologician@users.noreply.github.com>"]
description   = "A1 — The cryptographic identity and authorization layer that turns anonymous AI agents into accountable, verifiable entities. One Identity. Full Provenance."
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/dyologician/a1"
documentation = "https://docs.rs/a1-ai"
readme        = "README.md"
keywords      = ["ai-agents", "delegation", "cryptography", "authorization", "zero-knowledge"]
categories    = ["cryptography", "authentication"]
rust-version  = "1.88"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "a1"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

[profile.dev]
opt-level = 1

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
large_futures = "warn"

[features]
default     = []
serde       = ["dep:serde", "ed25519-dalek/serde"]
async       = ["dep:async-trait", "dep:tokio", "dep:base64", "dep:url"]
wire        = ["serde", "dep:serde_json"]
did         = ["wire"]
zk          = ["serde"]
anchor      = ["wire", "zk", "did"]
negotiate   = ["wire"]
swarm       = ["wire", "serde"]
governance  = ["wire", "serde"]
tracing     = ["dep:tracing"]
ffi         = ["wire"]
policy-yaml = ["serde", "dep:serde_yaml"]
schema      = ["dep:schemars"]
otel        = ["dep:opentelemetry"]
cbor        = ["wire", "dep:ciborium"]
post-quantum = []
full        = ["serde", "async", "wire", "did", "zk", "anchor", "negotiate", "swarm", "governance", "tracing", "ffi", "policy-yaml", "schema", "otel", "cbor"]

[dependencies]
blake3        = { workspace = true }
subtle        = { workspace = true }
ed25519-dalek = { workspace = true }
rand          = { workspace = true }
thiserror     = { workspace = true }
zeroize       = { workspace = true }
hex           = { workspace = true }
base64        = { workspace = true, optional = true }
serde         = { workspace = true, optional = true }
serde_json    = { workspace = true, optional = true }
async-trait   = { workspace = true, optional = true }
tokio         = { workspace = true, optional = true, features = ["rt"] }
tracing       = { workspace = true, optional = true }
serde_yaml    = { version = "0.9", optional = true }
schemars      = { version = "0.8", optional = true }
opentelemetry = { version = "0.23", default-features = false, features = ["trace"], optional = true }
ciborium      = { version = "0.2", optional = true }
url           = { version = "2", optional = true }

[dev-dependencies]
hex        = { workspace = true }
criterion  = { version = "0.5", features = ["html_reports"] }
tokio      = { workspace = true }
serde_json = { workspace = true }
proptest   = "1"

[[bench]]
name    = "chain_bench"
harness = false