[package]
name        = "a1-cli"
version     = "2.8.0"
edition     = "2021"
authors     = ["dyolo <@dyologician>"]
description = "CLI for A1 — issue, revoke, inspect, and verify AI agent delegation certificates"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/dyologician/a1"
# Disambiguates `cargo run -p a1-cli` when multiple [[bin]] targets exist.
# The installed binary is named `a1`; use `--bin a1-cli` to get the alias.
default-run = "a1"

[[bin]]
name = "a1"
path = "src/main.rs"

# Alias so both `cargo install --bin a1` and `cargo install --bin a1-cli` work.
# The installed binary is the same program regardless of which name is used.
[[bin]]
name = "a1-cli"
path = "src/main.rs"

[features]
default = ["wire"]
wire    = []

[dependencies]
a1           = { path = "..", version = "2.8", features = ["serde", "wire"] }
a1-pg        = { path = "../a1-pg", version = "2.8" }
ed25519-dalek = { workspace = true }
clap         = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", features = ["json"] }
sqlx         = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
serde_json   = "1"
serde_yaml   = "0.9"
anyhow       = "1"
hex          = "0.4"
serde        = { version = "1", features = ["derive"] }
