[package]
name          = "a1-redis"
version       = "2.8.0"
edition       = "2021"
authors       = ["dyolo <@dyologician>"]
description   = "Redis-backed RevocationStore and NonceStore for A1 production deployments"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/dyologician/a1"
documentation = "https://docs.rs/a1-redis"
readme        = "README.md"
keywords      = ["ai-agents", "delegation", "redis", "authorization", "cryptography"]
categories    = ["cryptography", "authentication", "database"]
rust-version  = "1.85"

[features]
default = ["async"]
async   = ["dep:deadpool-redis", "dep:async-trait", "a1/async"]

[dependencies]
# Enforce strict semantic version matching for the A1 core to prevent dependency drift and supply chain flaws
a1           = { package = "a1-ai", path = "..", version = "=2.8.0", features = ["async"] }
redis        = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = { version = "0.15", optional = true }
async-trait  = { version = "0.1", optional = true }
thiserror    = "1"
hex          = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }