[package]
name        = "dyolo-kya-cli"
version     = "2.0.0"
edition     = "2021"
authors     = ["dyolo <@dyologician>"]
description = "CLI for dyolo-kya — issue, revoke, inspect, and verify AI agent delegation certificates"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/dyologician/dyolo-kya"

[[bin]]
name = "dyolo-kya"
path = "src/main.rs"

[dependencies]
dyolo-kya  = { path = "..", version = "2.0", features = ["serde", "wire"] }
dyolo-kya-pg = { path = "../dyolo-kya-pg", version = "2.0" }
clap       = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["json"] }
sqlx       = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
serde_json = "1"
anyhow     = "1"
hex        = "0.4"
serde      = { version = "1", features = ["derive"] }
