[package]
name        = "dyolo-kya-identity"
version     = "2.0.0"
edition     = "2021"
authors     = ["dyolo <@dyologician>"]
description = "JWT/OIDC, OAuth2, and SPIFFE identity bridging for dyolo-kya — bind enterprise identities to Ed25519 delegation keys"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/dyologician/dyolo-kya"
keywords    = ["ai-agents", "delegation", "jwt", "oidc", "spiffe"]

[features]
default  = ["jwt"]
jwt      = ["dep:jsonwebtoken"]
policy   = ["dep:serde_yaml"]
spiffe   = []

[dependencies]
dyolo-kya     = { path = "..", version = "2.0", features = ["serde", "wire"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "1"
blake3        = "1"
ed25519-dalek = { version = "2" }
hex           = "0.4"
jsonwebtoken  = { version = "9", optional = true }
serde_yaml    = { version = "0.9", optional = true }
